--- a/data-types.ipynb
+++ b/data-types.ipynb
@@ -15,20 +15,20 @@
    "id": "ce38026f",
    "metadata": {},
    "source": [
-    "1. Integers\n",
+    "# 1. Integers\n",
     "\n",
     "## Number bases\n",
     "- Binary (Base 2): Introduced by 0b or 0B.\n",
     "- Octal (Base 8): Introduced by 0o or 0O.\n",
     "- Hexadecimal (Base 16): Introduced by 0x or 0X.\n",
     "\n",
-    "2. Floating-point Numbers\n",
+    "# 2. Floating-point Numbers\n",
     "- 1.3\n",
     "\n",
-    "3. Complx numbers\n",
+    "# 3. Complx numbers\n",
     "- 4+5j\n",
     "\n",
-    "4. Strings\n",
+    "# 4. Strings\n",
     "\"I am a string.\"\n",
     "\n",
     "- Including Quotes in Strings:\n",
@@ -60,7 +60,7 @@
     "```\n",
     "This is a new ' book\n",
     "\n",
-    "5. Boolean Type\n",
+    "# 5. Boolean Type\n",
     "It is essential part of logical operations and decision-making constructs in programming with valuse 'True' and 'False'\n"
    ]
   }
